# django_project

./: .env  .gitignore  pyproject.toml
quotes_to_scrape/: dev-docker-compose.yaml
quotes_to_scrape/quotes_app/: forms.py  models.py  urls.py  views.py
quotes_to_scrape/quotes_app/migrations/: 0001_initial.py  0002_author_tag_quote.py  0003_alter_quote_author_alter_quote_tag.py  0004_remove_quote_tag_quote_tag.py  0005_author_born_date_author_born_location_and_more.py  0006_delete_user.py
quotes_to_scrape/quotes_app/static/: main.css
quotes_to_scrape/quotes_app/templates/: authors.html  base.html  index.html  login.html  new_author.html  new_quote.html  sign_up.html
quotes_to_scrape/quotes_to_scrape/: asgi.py  settings.py  urls.py  wsgi.py
quotes_to_scrape/scripts/: seed_script.py
