[tool.poetry]
name = "django-project"
version = "0.1.0"
description = "My first django project"
authors = ["RotterPotter <kivilele@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"
faker = "^24.9.0"
bs4 = "^0.0.2"
mongoengine = "^0.28.2"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
